--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/webp" href="/monadlogo.webp" />
     <link rel="apple-touch-icon" href="/monadlogo.webp" />
+    <link rel="manifest" href="/manifest.json" />
     
     <!-- Primary Meta Tags -->
     <title>Monad Token Manager | ERC20 Token Dashboard</title>
@@ -14,7 +15,7 @@
     <meta name="description" content="Premium web application for managing ERC20 tokens on Monad testnet. Transfer, mint, and manage your tokens with a beautiful, intuitive interface." />
     <meta name="keywords" content="Monad, ERC20, Token Manager, Blockchain, Web3, DeFi, Crypto, Ethereum, Testnet" />
     <meta name="author" content="Monad Token Manager" />
-    <meta name="theme-color" content="#7B3FF2" />
+    <meta name="theme-color" content="#8B5CF6" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
